[workspace]
resolver = "2"
members = [
  "compiler/musubu",
  "compiler/musubu_ast",
  "compiler/musubu_desugar",
  "compiler/musubu_hir",
  "compiler/musubu_ir",
  "compiler/musubu_ir_compiler",
  "compiler/musubu_lexer",
  "compiler/musubu_parser",
  "compiler/musubu_resolve",
  "compiler/musubu_primitive",
  "compiler/musubu_type_check",
  "compiler/musubu_vm", 
  "compiler/musubu_scope",
  "compiler/musubu_span",
  "compiler/musubu_infer",
  "compiler/musubu_builtin",
  "compiler/musubu_name_space",
  "compiler/musubu_engine",
  "compiler/musubu_driver",
  "compiler/musubu_cache",
]

