[package]
name = "musubu_name_space"
version = "0.1.0"
edition = "2024"

[dependencies]
musubu_primitive = { version = "0.1.0", path = "../musubu_primitive" }
musubu_scope = { version = "0.1.0", path = "../musubu_scope" }
indexmap = { version = "2.14.0", default-features = false }
twox-hash = { version = "2.1.2", default-features = false, features = ["xxhash64"] }
